--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
       <artifactId>guava</artifactId>
       <version>24.1-jre</version>
     </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt</artifactId>
+      <version>0.9.0</version>
+    </dependency>
 
     <dependency>
       <groupId>org.slf4j</groupId>
